--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "francoischaumont/log",
+    "name": "francoischaumont/homemade-log",
     "description": "Write logs in file",
     "authors": [
         {
